// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.autoupdate;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/autoupdate";

// RollbackService provides functions to set up and verify enterprise rollback.
service RollbackService {
  // SetUpPskNetwork is deprecated and replaced by SetUpNetworks.
  rpc SetUpPskNetwork (google.protobuf.Empty) returns (SetUpPskResponse) {
    option deprecated = true;
  }
  // SetUpNetworks sets various networks supported by rollback automatically.
  rpc SetUpNetworks (SetUpNetworksRequest) returns (SetUpNetworksResponse);
  // VerifyRollback verifies that oobe ends up on the enrollment screen after
  // rollback and that the networks provided still exists.
  rpc VerifyRollback (VerifyRollbackRequest) returns (VerifyRollbackResponse);
}

message SetUpPskResponse {
  option deprecated = true;
  string guid = 1;
}

message NetworkInformation {
  string guid = 1;
}

message SetUpNetworksRequest {
  // Empty but created in case it is needed in the future.
}

message SetUpNetworksResponse {
  repeated NetworkInformation networks = 1;
}

// VerifyRollbackRequest needs to contain the unchanged NetworkInformation from
// SetUpNetworksResponse.
message VerifyRollbackRequest {
  reserved 1; // deprecated guid
  repeated NetworkInformation networks = 2;
}

message VerifyRollbackResponse {
  bool successful = 1;
  // It provides details about the failure or further information about the
  // success that should be logged for reference.
  string verification_details = 2;
}
