// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.policy;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/policy";

// UpdateService provides functions to interact with the update client on the test device,
// and get data needed for the update.
service UpdateService {
  rpc CheckForUpdate (UpdateRequest) returns (google.protobuf.Empty) {}
  rpc LSBReleaseContent (google.protobuf.Empty) returns (LSBRelease) {}
  rpc LSBReleaseOverwriteContent (google.protobuf.Empty) returns (LSBRelease) {}
  rpc OverwriteLSBRelease (LSBRelease) returns (google.protobuf.Empty) {}
}

message UpdateRequest {
  string omaha_url = 1;
}

message LSBRelease {
  string board = 1;
  string builder_path = 2;
  string milestone = 3;
  string build_number = 4;
  string patch_number = 5;
  string version = 6;
  string release_app_id = 7;
  string build_type = 8;
  string release_track = 9;
  string arc_sdk_version = 10;
  string arc_version = 11;
}